syntax = "proto3";

package FKPasswordGrpc;

service PasswordService {
    rpc HashPassword (HashPasswordRequest) returns (HashPasswordResponse) {}
    rpc VerifyPassword (VerifyPasswordRequest) returns (VerifyPasswordResponse) {}
}

message HashPasswordRequest {
    string password = 1;
}

message HashPasswordResponse {
    int32 status_code = 1;
    string message = 2;
    string hashed_password = 3;
    string salt = 4;
}

message VerifyPasswordRequest {
    string password = 1;
    string hashed_password = 2;
}

message VerifyPasswordResponse {
    int32 status_code = 1;
    string message = 2;
    bool is_valid = 3;
}